--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/btn_record"
+        <com.senshuu.voicecloud.CustomButton
+            android:id="@+id/btnRecord"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/circle_button_selector"
+            android:background="@drawable/circle_button_anim"
             android:text="录音"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/btn_play"
+        <com.senshuu.voicecloud.CustomButton
+            android:id="@+id/btnPlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@id/btn_record"
+            android:layout_above="@id/btnRecord"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="24dp"
             android:text="播放录音" />
